# di_example_iron

./: Cargo.toml  test.db
migrations/2018-10-20-232209_intial_setup/: up.sql
src/: handler.rs  lib.rs  main.rs
src/dao/: mod.rs  model.rs  schema.rs
tests/: test.rs
