[package]
name = "di_example_iron"
version = "0.1.0"
authors = ["Stu Small <stuart.alan.small@gmail.com>"]

[dependencies]
diesel = { version="1.3", features = ["sqlite", "r2d2"]}
iron = "0.6"
lazy_static = "1.1"
router = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1.3"

[dev-dependencies]
iron-test = "0.6"